--- a/index.html
+++ b/index.html
@@ -4,18 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Entrega 1 CSS</title>
+    <title>PowerCore Gym</title>
 </head>
 <body>
-    <nav class="navbar">
+    <header>
         <img src="imgs/logo.png" alt="logo" class="logo">
         <h1 class="titulo">PowerCore Gym</h1>
-        <ul class="links">
-            <li class="links_li"><a href="#">INICIO</a></li>
-            <li class="links_li"><a href="#">INFORMACIÓN</a></li>
-            <li class="links_li"><a href="#">LOCALES</a></li>
-            <li class="links_li"><a href="#">CONTACTANOS</a></li>
-        </ul>
-    </nav>
+        <nav class="navbar">
+            <ul class="links">
+                <li class="links_li"><a href="#">INICIO</a></li>
+                <li class="links_li"><a href="#">INFORMACIÓN</a></li>
+                <li class="links_li"><a href="#">LOCALES</a></li>
+                <li class="links_li"><a href="#">CONTACTANOS</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <div>
+                <div class="hero_info">
+                    <h2>Potencia tu Esencia</h2>
+                    <h2>Define tu Fortaleza</h2>
+                    <p>¡Desata tu máximo potencial! ¡Conquista tus metas, forja tu cuerpo y alcanza un nuevo nivel de fuerza y vitalidad! ¡Empieza hoy mismo tu transformación!</p>
+                    <div class="btn-container">
+                        <a href="#">¡Únete a PowerCore Gym!</a>
+                        <a href="#">Más información</a>
+                    </div>
+                </div>
+                <img src="imgs/hero_img.webp" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="info">
+        <p>En PowerCore Gym, te ofrecemos un espacio de entrenamiento de primera categoría, equipado con tecnología de vanguardia y un equipo de expertos en fitness listos para guiarte en cada paso de tu camino hacia la transformación. Descubre nuestras clases dinámicas, amplio horario de apertura y un ambiente motivador que te impulsará a alcanzar tus objetivos de forma efectiva. ¡Únete a nosotros y desata tu verdadero potencial hoy mismo!</p>
+    </section>
 </body>
 </html>
