--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>PowerCore Gym</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header>
-        <img src="imgs/logo.png" alt="logo" class="logo">
+        <a href="#"><img src="imgs/logo.png" alt="logo" class="logo"></a>
         <h1 class="titulo">PowerCore Gym</h1>
+
+        <!-- NAVBAR -->
         <nav class="navbar">
             <ul class="links">
                 <li class="links_li"><a href="#">INICIO</a></li>
@@ -19,24 +22,58 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-        <div class="container">
-            <div>
-                <div class="hero_info">
-                    <h2>Potencia tu Esencia</h2>
-                    <h2>Define tu Fortaleza</h2>
-                    <p>¡Desata tu máximo potencial! ¡Conquista tus metas, forja tu cuerpo y alcanza un nuevo nivel de fuerza y vitalidad! ¡Empieza hoy mismo tu transformación!</p>
-                    <div class="btn-container">
-                        <a href="#">¡Únete a PowerCore Gym!</a>
-                        <a href="#">Más información</a>
+    <main>
+        <!-- HERO -->
+        <section class="hero">
+            <div class="container">
+                <div>
+                    <div class="hero_info">
+                        <h2>Potencia tu Esencia</h2>
+                        <h2>Define tu Fortaleza</h2>
+                        <p>¡Desata tu máximo potencial! ¡Conquista tus metas, forja tu cuerpo y alcanza un nuevo nivel de fuerza y vitalidad! ¡Empieza hoy mismo tu transformación!</p>
+                        <div class="btn-container">
+                            <a href="#">¡Únete a PowerCore Gym!</a>
+                            <a href="#">Más información</a>
+                        </div>
                     </div>
+                    <img src="imgs/hero_img.webp" alt="">
                 </div>
-                <img src="imgs/hero_img.webp" alt="">
             </div>
-        </div>
-    </section>
-    <section class="info">
-        <p>En PowerCore Gym, te ofrecemos un espacio de entrenamiento de primera categoría, equipado con tecnología de vanguardia y un equipo de expertos en fitness listos para guiarte en cada paso de tu camino hacia la transformación. Descubre nuestras clases dinámicas, amplio horario de apertura y un ambiente motivador que te impulsará a alcanzar tus objetivos de forma efectiva. ¡Únete a nosotros y desata tu verdadero potencial hoy mismo!</p>
-    </section>
+        </section>
+        
+
+        <!-- INFO -->
+        <section class="info">
+            <p>En PowerCore Gym, te ofrecemos un espacio de entrenamiento de primera categoría, equipado con tecnología de vanguardia y un equipo de expertos en fitness listos para guiarte en cada paso de tu camino hacia la transformación. Descubre nuestras clases dinámicas, amplio horario de apertura y un ambiente motivador que te impulsará a alcanzar tus objetivos de forma efectiva. ¡Únete a nosotros y desata tu verdadero potencial hoy mismo!</p>
+        </section>
+
+        <!-- CARDS -->
+        <section class="cards-section">
+            <h3>¿Por qué elegir PowerCore Gym?</h3>
+            <div class="cards-container">
+                <div class="card">
+                    <h3>💪</h3>
+                    <h4>Transformación física</h4>
+                    <p>
+                        <span>Obtén resultados visibles y duraderos</span> a través de nuestro enfoque integral de entrenamiento, que incluye programas personalizados, asesoramiento nutricional y seguimiento constante. Logra el cuerpo que siempre has deseado y aumenta tu confianza en ti mismo.
+                    </p>
+                </div>
+                <div class="card">
+                    <h3>💓</h3>
+                    <h4>Salud y bienestar</h4>
+                    <p>
+                        <span>Mejora tu calidad de vida</span> con nuestras instalaciones de vanguardia y una amplia variedad de clases y actividades. Fortalece tu sistema cardiovascular, aumenta tu resistencia y disfruta de una mayor energía y vitalidad en tu día a día.
+                    </p>
+                </div>
+                <div class="card">
+                    <h3>🏋️</h3>
+                    <h4>Asesoramiento profesional</h4>
+                    <p>
+                        <span>Tendrás acceso a entrenadores altamente capacitados que te brindarán orientación experta y personalizada.</span> Obtén consejos sobre técnicas de entrenamiento, corrección de postura y recomendaciones específicas para maximizar tu rendimiento y evitar lesiones. Aprovecha el conocimiento y la experiencia de nuestros profesionales para optimizar tu entrenamiento y alcanzar resultados óptimos.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
