--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/35cf0206f1.js" crossorigin="anonymous"></script>
     <title>PowerCore Gym</title>
 </head>
 <body>
@@ -75,5 +76,58 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER -->
+    <footer>
+
+        <section class="info-section">
+            <div class="info-container">
+                <h2>Contáctanos</h2>
+                <div class="locales">
+                    <div class="local">
+                        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.8737380643292!2d-65.30418518905013!3d-26.812148676610192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942242d962f5b221%3A0x970bf87b71e49e9!2sRC%20GYM%20Yerba%20Buena!5e0!3m2!1ses!2sar!4v1688850477301!5m2!1ses!2sar" target="footer-iframe">Tucuman, Argentina</a>
+                        <div class="ubicacion">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>CEV, Av. Aconquija 2122, T4107 Yerba Buena, Tucumán</p>
+                        </div>
+                        <div class="mail">
+                        <i class="fa-solid fa-envelope"></i>
+                        <p>powercoregym@gmail.com</p>
+                        </div>
+                        <div class="telefono">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>+54 9 381 391 5594</p>
+                        </div>
+                    </div>
+                    <div class="local">
+                        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.591467051556!2d-58.54389648833279!3d-34.639762859290286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9dc30193507%3A0x5632fc4dab554edc!2sGym%20La%20Masa!5e0!3m2!1ses!2sar!4v1688850547298!5m2!1ses!2sar" target="footer-iframe">Buenos Aires, Argentina</a>
+                        <div class="ubicacion">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <p>Av. Maipú 3912, Ciudadela, Provincia de Buenos Aires</p>
+                        </div>
+                        <div class="mail">
+                        <i class="fa-solid fa-envelope"></i>
+                        <p>powercoregym@gmail.com</p>
+                        </div>
+                        <div class="telefono">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>+54 9 011 678 2143</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="redes">
+                    <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F%3Flang%3Des" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                </div>
+            </div>
+            <iframe src="imgs/footer_img.jpg" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" name="footer-iframe"></iframe>
+        </section>
+        <hr>
+        <section class="copyright-container">
+            <img src="imgs/logo.png" alt="Logo">
+            <p>©PowerCore Gym 2023</p>
+        </section>
+    </footer>
 </body>
 </html>
