--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <p>¡Desata tu máximo potencial! ¡Conquista tus metas, forja tu cuerpo y alcanza un nuevo nivel de fuerza y vitalidad! ¡Empieza hoy mismo tu transformación!</p>
                         <div class="btn-container">
                             <a href="#">¡Únete a PowerCore Gym!</a>
-                            <a href="#">Más información</a>
+                            <a href="#info">Más información</a>
                         </div>
                     </div>
                     <img src="imgs/hero_img.webp" alt="">
@@ -44,7 +44,7 @@
         
 
         <!-- INFO -->
-        <section class="info">
+        <section class="info" id="info">
             <p>En PowerCore Gym, te ofrecemos un espacio de entrenamiento de primera categoría, equipado con tecnología de vanguardia y un equipo de expertos en fitness listos para guiarte en cada paso de tu camino hacia la transformación. Descubre nuestras clases dinámicas, amplio horario de apertura y un ambiente motivador que te impulsará a alcanzar tus objetivos de forma efectiva. ¡Únete a nosotros y desata tu verdadero potencial hoy mismo!</p>
         </section>
 
