add: responsive, 1200px and 992px

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_responsive.css">
     <script src="https://kit.fontawesome.com/35cf0206f1.js" crossorigin="anonymous"></script>
     <title>PowerCore Gym</title>
 </head>
@@ -17,9 +18,9 @@
         <nav class="navbar">
             <ul class="links">
                 <li class="links_li"><a href="#">INICIO</a></li>
-                <li class="links_li"><a href="#">INFORMACIÓN</a></li>
-                <li class="links_li"><a href="#">LOCALES</a></li>
-                <li class="links_li"><a href="#">CONTACTANOS</a></li>
+                <li class="links_li"><a href="#info">INFORMACIÓN</a></li>
+                <li class="links_li"><a href="#locales">LOCALES</a></li>
+                <li class="links_li"><a href="#footer">CONTACTANOS</a></li>
             </ul>
         </nav>
     </header>
@@ -78,12 +79,12 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
+    <footer id="footer">
 
         <section class="info-section">
             <div class="info-container">
                 <h2>Contáctanos</h2>
-                <div class="locales">
+                <div class="locales" id="locales">
                     <div class="local">
                         <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.8737380643292!2d-65.30418518905013!3d-26.812148676610192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942242d962f5b221%3A0x970bf87b71e49e9!2sRC%20GYM%20Yerba%20Buena!5e0!3m2!1ses!2sar!4v1688850477301!5m2!1ses!2sar" target="footer-iframe">Tucuman, Argentina</a>
                         <div class="ubicacion">
