--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
                 <li class="links_li"><a href="#footer">CONTACTANOS</a></li>
             </ul>
         </nav>
+            <!-- MENU HAMBURGUESA CHECKBOX -->
+            <label for="check" class="check-label"><i class="fa-solid fa-bars"></i></label>
     </header>
+            <input type="checkbox" id="check">
+            <!-- MENU HAMBURGUESA -->
+            <div class="menu">
+                <nav class="navbar-responsive">
+                    <ul>
+                        <li class="links_li"><a href="#">INICIO</a></li>
+                        <li class="links_li"><a href="#info">INFORMACIÓN</a></li>
+                        <li class="links_li"><a href="#locales">LOCALES</a></li>
+                        <li class="links_li"><a href="#footer">CONTACTANOS</a></li>
+                    </ul>
+                </nav>
+            </div>
     <main>
         <!-- HERO -->
         <section class="hero">
