--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
                     <h3>💪</h3>
                     <h4>Transformación física</h4>
                     <p>
-                        <span>Obtén resultados visibles y duraderos</span> a través de nuestro enfoque integral de entrenamiento, que incluye programas personalizados, asesoramiento nutricional y seguimiento constante. Logra el cuerpo que siempre has deseado y aumenta tu confianza en ti mismo.
+                        Obtén resultados visibles y duraderos a través de nuestro enfoque integral de entrenamiento, que incluye programas personalizados, asesoramiento nutricional y seguimiento constante. Logra el cuerpo que siempre has deseado y aumenta tu confianza en ti mismo.
                     </p>
                 </div>
                 <div class="card">
                     <h3>💓</h3>
                     <h4>Salud y bienestar</h4>
                     <p>
-                        <span>Mejora tu calidad de vida</span> con nuestras instalaciones de vanguardia y una amplia variedad de clases y actividades. Fortalece tu sistema cardiovascular, aumenta tu resistencia y disfruta de una mayor energía y vitalidad en tu día a día.
+                        Mejora tu calidad de vida con nuestras instalaciones de vanguardia y una amplia variedad de clases y actividades. Fortalece tu sistema cardiovascular, aumenta tu resistencia y disfruta de una mayor energía y vitalidad en tu día a día.
                     </p>
                 </div>
                 <div class="card">
                     <h3>🏋️</h3>
                     <h4>Asesoramiento profesional</h4>
                     <p>
-                        <span>Tendrás acceso a entrenadores altamente capacitados que te brindarán orientación experta y personalizada.</span> Obtén consejos sobre técnicas de entrenamiento, corrección de postura y recomendaciones específicas para maximizar tu rendimiento y evitar lesiones. Aprovecha el conocimiento y la experiencia de nuestros profesionales para optimizar tu entrenamiento y alcanzar resultados óptimos.
+                        Tendrás acceso a entrenadores altamente capacitados que te brindarán orientación experta y personalizada. Obtén consejos sobre técnicas de entrenamiento, corrección de postura y recomendaciones específicas para maximizar tu rendimiento y evitar lesiones. Aprovecha el conocimiento y la experiencia de nuestros profesionales para optimizar tu entrenamiento y alcanzar resultados óptimos.
                     </p>
                 </div>
             </div>
